--- a/data/application.json
+++ b/data/application.json
@@ -118,5 +118,21 @@
     "problem": "Ремонт підшипників",
     "district": "Богунський",
     "street": "2-й Руднянский провулок"
+  },
+  {
+    "name": "Катерина",
+    "email": "b-kate2@ukr.net",
+    "phone": "0977484850",
+    "problem": "Заміна ременя",
+    "district": "Богунський",
+    "street": "Барашевська вулиця"
+  },
+  {
+    "name": "Катерина",
+    "email": "b-kate2@ukr.net",
+    "phone": "0977484850",
+    "problem": "Заміна ременя",
+    "district": "Богунський",
+    "street": "Барашевська вулиця"
   }
 ]
