додав кнопки на головну

--- a/data/application.json
+++ b/data/application.json
@@ -134,5 +134,21 @@
     "problem": "Заміна ременя",
     "district": "Богунський",
     "street": "Барашевська вулиця"
+  },
+  {
+    "name": "Володимир",
+    "email": "24g_chv1v@liceum.ztu.edu.ua",
+    "phone": "+380965383239",
+    "problem": "Діагностика двигуна",
+    "district": "Богунський",
+    "street": "Басейна вулиця"
+  },
+  {
+    "name": "Катерина11",
+    "email": "b-kate1@ukr.net",
+    "phone": "0977484850",
+    "problem": "Заміна масла",
+    "district": "Богунський",
+    "street": "Транспортна вулиця"
   }
 ]
