--- a/data/application.json
+++ b/data/application.json
@@ -150,5 +150,69 @@
     "problem": "Заміна масла",
     "district": "Богунський",
     "street": "Транспортна вулиця"
+  },
+  {
+    "name": "Вова",
+    "email": "volodymyr240809@gmail.com",
+    "phone": "0965383239",
+    "problem": "Заміна гальмівних дисків",
+    "district": "Корольовський",
+    "street": "1-й Корольова провулок"
+  },
+  {
+    "name": "24g_chvv",
+    "email": "volodymyr240809@gmail.com",
+    "phone": "+380965383239",
+    "problem": "Ремонт підшипників",
+    "district": "Богунський",
+    "street": "Каменный Спуск провулок"
+  },
+  {
+    "name": "24g_chvv",
+    "email": "b-kate@ukr.net",
+    "phone": "0977484850",
+    "problem": "Заміна ременя",
+    "district": "Корольовський",
+    "street": "Корольова вулиця"
+  },
+  {
+    "name": "Катерина11",
+    "email": "vova@gmail.com",
+    "phone": "0977484850",
+    "problem": "Перевірка системи охолодження",
+    "district": "Богунський",
+    "street": "Басейна вулиця"
+  },
+  {
+    "name": "24g_chvv",
+    "email": "vovavlog0080@gmail.com",
+    "phone": "0965383239",
+    "problem": "Ремонт підшипників",
+    "district": "Богунський",
+    "street": "2-й Чудновский провулок"
+  },
+  {
+    "name": "Чижевський Володимир Володимирович",
+    "email": "volodymyr240809@gmail.com",
+    "phone": "+380965383239",
+    "problem": "Діагностика двигуна",
+    "district": "Богунський",
+    "street": "Небесної Сотні вулиця"
+  },
+  {
+    "name": "Щодо повернення поилково сплачених коштів",
+    "email": "vovavlog0080@gmail.com",
+    "phone": "+38 096 538 32 39",
+    "problem": "Перевірка системи охолодження",
+    "district": "Богунський",
+    "street": "Басейна вулиця"
+  },
+  {
+    "name": "21",
+    "email": "vovavlog080@gmail.com",
+    "phone": "+38 096 538 32 39",
+    "problem": "Перевірка системи охолодження",
+    "district": "Корольовський",
+    "street": "2-й Сінний провулок"
   }
 ]
