--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "start": "node server.js",
     "type": "commonjs"
   },
-  "keywords": [],
+  "keywords": [
+    "car",
+    "clearance",
+    "calculator",
+    "ukraine",
+    "customs",
+    "nbu",
+    "exchange-rate"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
